# parco-geocodio

./: Cargo.toml  README.md
src/: api_error.rs  lib.rs  test.rs
src/client/: builder.rs  geocode.rs  mod.rs  urls.rs
src/geocode/: error.rs  mod.rs  request.rs  request_builder.rs  response.rs
