[package]
name = "parco-geocodio"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"

[dev-dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", default-features = false, features = [
    "query",
    "rustls",
] }
tokio = { version = "1.49.0", features = ["macros", "rt"] }
